Adjusts